Min.Tests/Samples/ValidSamples/source-06.min
.negativeValue int = 123
out "before: ", .negativeValue

.negativeValue = 123 * -1
out "after: ", .negativeValue