Min.Tests/Samples/InvalidSamples/source-11.min
.value = 123

if .value = 1:
    output "bigger than 1"
endif